fix separator spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,7 @@ a.nav-link {
 }
 a.nav-link.separator {
 	padding-bottom: 1em;
+	margin-bottom: 0.5em;
 	border-bottom: 1px solid #777;
 }
 /* this rule keeps the nav bar from expanding on hover */
